--- a/rtos.ioc
+++ b/rtos.ioc
@@ -14,23 +14,28 @@ Mcu.IP2=RCC
 Mcu.IP3=RTC
 Mcu.IP4=SYS
 Mcu.IP5=UART4
-Mcu.IPNb=6
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F107V(B-C)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=VP_FREERTOS_VS_ENABLE
-Mcu.Pin11=VP_RTC_VS_RTC_Activate
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=PC11
+Mcu.Pin11=PD5
+Mcu.Pin12=PD6
+Mcu.Pin13=PB3
+Mcu.Pin14=VP_FREERTOS_VS_ENABLE
+Mcu.Pin15=VP_RTC_VS_RTC_Activate
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=OSC_IN
 Mcu.Pin3=OSC_OUT
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=PA15
-Mcu.Pin7=PC10
-Mcu.Pin8=PC11
-Mcu.Pin9=PB3
-Mcu.PinsNb=13
+Mcu.Pin4=PA9
+Mcu.Pin5=PA10
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=PA15
+Mcu.Pin9=PC10
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F107VCTx
@@ -45,26 +50,33 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false
-NVIC.UART4_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.UART4_IRQn=true\:15\:0\:true\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:5\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=JTAG_4_pins
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=JTAG_4_pins
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.Mode=JTAG_4_pins
 PA15.Signal=SYS_JTDI
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB3.Mode=JTAG_4_pins
 PB3.Signal=SYS_JTDO
-PC10.GPIOParameters=GPIO_Label
-PC10.GPIO_Label=GPRS4G_TX
+PC10.GPIOParameters=GPIO_Speed,GPIO_Mode
+PC10.GPIO_Mode=GPIO_MODE_AF_PP
+PC10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC10.Mode=Asynchronous
 PC10.Signal=UART4_TX
-PC11.GPIOParameters=GPIO_Label
-PC11.GPIO_Label=GPRS4G_RX
+PC11.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PC11.GPIO_Mode=GPIO_MODE_INPUT
+PC11.GPIO_PuPd=GPIO_NOPULL
 PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -79,6 +91,22 @@ PCC.Seq0=0
 PCC.Series=STM32F1
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PD5.GPIO_Label=GPRS4G_PWR
+PD5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PD5.GPIO_PuPd=GPIO_NOPULL
+PD5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PD5.Locked=true
+PD5.PinState=GPIO_PIN_RESET
+PD5.Signal=GPIO_Output
+PD6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PD6.GPIO_Label=GPRS4G_ON
+PD6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PD6.GPIO_PuPd=GPIO_NOPULL
+PD6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PD6.Locked=true
+PD6.PinState=GPIO_PIN_RESET
+PD6.Signal=GPIO_Output
 PinOutPanel.RotationAngle=270
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -105,7 +133,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -132,6 +160,8 @@ RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
