--- a/rtos.ioc
+++ b/rtos.ioc
@@ -1,47 +1,141 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_TIMERS,FootprintOK,configTOTAL_HEAP_SIZE,MEMORY_ALLOCATION
-FREERTOS.MEMORY_ALLOCATION=2
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_13
+ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_15
+ADC1.Channel-15\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_7
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_10
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.DiscontinuousConvMode=DISABLE
+ADC1.EnableAnalogWatchDog=false
+ADC1.EnableRegularConversion=ENABLE
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T4_CC4
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,DataAlign,ScanConvMode,DiscontinuousConvMode,EnableRegularConversion,ExternalTrigConv,InjNumberOfConversion,EnableAnalogWatchDog,Rank-15\#ChannelRegularConversion,Channel-15\#ChannelRegularConversion,SamplingTime-15\#ChannelRegularConversion,master
+ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversion=14
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.Rank-10\#ChannelRegularConversion=11
+ADC1.Rank-11\#ChannelRegularConversion=12
+ADC1.Rank-12\#ChannelRegularConversion=13
+ADC1.Rank-15\#ChannelRegularConversion=14
+ADC1.Rank-2\#ChannelRegularConversion=3
+ADC1.Rank-3\#ChannelRegularConversion=4
+ADC1.Rank-4\#ChannelRegularConversion=5
+ADC1.Rank-5\#ChannelRegularConversion=6
+ADC1.Rank-6\#ChannelRegularConversion=7
+ADC1.Rank-7\#ChannelRegularConversion=8
+ADC1.Rank-8\#ChannelRegularConversion=9
+ADC1.Rank-9\#ChannelRegularConversion=10
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-15\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.ScanConvMode=ADC_SCAN_ENABLE
+ADC1.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.RequestsNb=1
+FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
-FREERTOS.configTOTAL_HEAP_SIZE=40960
-FREERTOS.configUSE_TIMERS=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SYS
-Mcu.IP5=UART4
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
+Mcu.IP10=USART1
+Mcu.IP2=FREERTOS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=RTC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM4
+Mcu.IP9=UART4
+Mcu.IPNb=11
 Mcu.Name=STM32F107V(B-C)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PC11
-Mcu.Pin11=PD5
-Mcu.Pin12=PD6
-Mcu.Pin13=PB3
-Mcu.Pin14=VP_FREERTOS_VS_ENABLE
-Mcu.Pin15=VP_RTC_VS_RTC_Activate
-Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin10=PA2
+Mcu.Pin11=PA5
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PE14
+Mcu.Pin19=PD8
 Mcu.Pin2=OSC_IN
+Mcu.Pin20=PD9
+Mcu.Pin21=PD10
+Mcu.Pin22=PD11
+Mcu.Pin23=PD12
+Mcu.Pin24=PD13
+Mcu.Pin25=PD14
+Mcu.Pin26=PD15
+Mcu.Pin27=PC6
+Mcu.Pin28=PC7
+Mcu.Pin29=PA8
 Mcu.Pin3=OSC_OUT
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=PA15
-Mcu.Pin9=PC10
-Mcu.PinsNb=17
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PA15
+Mcu.Pin36=PC10
+Mcu.Pin37=PC11
+Mcu.Pin38=PB3
+Mcu.Pin39=VP_FREERTOS_VS_ENABLE
+Mcu.Pin4=PC0
+Mcu.Pin40=VP_RTC_VS_RTC_Activate
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM4_VS_no_output4
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA1
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
+Mcu.UserConstants=ADC_NUMBER,14
 Mcu.UserName=STM32F107VCTx
 MxCube.Version=4.26.1
 MxDb.Version=DB.4.0.261
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -50,6 +144,7 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false
+NVIC.TIM1_CC_IRQn=true\:0\:0\:true\:false\:true\:false\:true
 NVIC.UART4_IRQn=true\:15\:0\:true\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:5\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -57,18 +152,55 @@ OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=ACPE_VADC
+PA0-WKUP.Signal=ADCx_IN0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=ACL_VADC
+PA1.Signal=ADCx_IN1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=GPRS4G_PWR
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA13.Mode=JTAG_4_pins
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=JTAG_4_pins
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.Mode=JTAG_4_pins
 PA15.Signal=SYS_JTDI
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=TOUCH_ADC
+PA2.Signal=ADCx_IN2
+PA5.Signal=ADCx_IN5
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=AC6_ADC
+PA6.Signal=ADCx_IN6
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=AC5_ADC
+PA7.Signal=ADCx_IN7
+PA8.GPIOParameters=PinState,GPIO_Label
+PA8.GPIO_Label=GPRS4G_ON
+PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
+PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=AC2_ADC
+PB0.Signal=ADCx_IN8
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=AC1_ADC
+PB1.Signal=ADCx_IN9
 PB3.Mode=JTAG_4_pins
 PB3.Signal=SYS_JTDO
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=AC9_ADC
+PC0.Signal=ADCx_IN10
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=AC10_ADC
+PC1.Signal=ADCx_IN11
 PC10.GPIOParameters=GPIO_Speed,GPIO_Mode
 PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -83,6 +215,26 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=AC8_ADC
+PC2.Signal=ADCx_IN12
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=AC7_ADC
+PC3.Signal=ADCx_IN13
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=AC4_ADC
+PC4.Signal=ADCx_IN14
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=AC3_ADC
+PC5.Signal=ADCx_IN15
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=Contactor2
+PC6.Locked=true
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=Contactor1
+PC7.Locked=true
+PC7.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F105/107
 PCC.MCU=STM32F107V(B-C)Tx
@@ -91,23 +243,40 @@ PCC.Seq0=0
 PCC.Series=STM32F1
 PCC.Temperature=25
 PCC.Vdd=3.3
-PD5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PD5.GPIO_Label=GPRS4G_PWR
-PD5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PD5.GPIO_PuPd=GPIO_NOPULL
-PD5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PD5.Locked=true
-PD5.PinState=GPIO_PIN_RESET
-PD5.Signal=GPIO_Output
-PD6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PD6.GPIO_Label=GPRS4G_ON
-PD6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PD6.GPIO_PuPd=GPIO_NOPULL
-PD6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PD6.Locked=true
-PD6.PinState=GPIO_PIN_RESET
-PD6.Signal=GPIO_Output
-PinOutPanel.RotationAngle=270
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=Contactor8
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=Contactor7
+PD11.Locked=true
+PD11.Signal=GPIO_Output
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=Contactor6
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=Contactor5
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=Contactor4
+PD14.Locked=true
+PD14.Signal=GPIO_Output
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=Contactor3
+PD15.Locked=true
+PD15.Signal=GPIO_Output
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=Contactor10
+PD8.Locked=true
+PD8.Signal=GPIO_Output
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=Contactor9
+PD9.Locked=true
+PD9.Signal=GPIO_Output
+PE14.Signal=S_TIM1_CH4
+PinOutPanel.RotationAngle=180
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
@@ -133,8 +302,9 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
-RCC.ADCFreqValue=36000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true
+RCC.ADCFreqValue=12000000
+RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=36000000
@@ -146,7 +316,7 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=72000000
 RCC.I2S2Freq_Value=72000000
 RCC.I2S3Freq_Value=72000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=72000000
 RCC.PLLCLKFreq_Value=72000000
 RCC.PLLMUL=RCC_PLL_MUL9
@@ -158,6 +328,51 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN10.0=ADC1_IN10,IN10
+SH.ADCx_IN10.ConfNb=1
+SH.ADCx_IN11.0=ADC1_IN11,IN11
+SH.ADCx_IN11.ConfNb=1
+SH.ADCx_IN12.0=ADC1_IN12,IN12
+SH.ADCx_IN12.ConfNb=1
+SH.ADCx_IN13.0=ADC1_IN13,IN13
+SH.ADCx_IN13.ConfNb=1
+SH.ADCx_IN14.0=ADC1_IN14,IN14
+SH.ADCx_IN14.ConfNb=1
+SH.ADCx_IN15.0=ADC1_IN15,IN15
+SH.ADCx_IN15.ConfNb=1
+SH.ADCx_IN2.0=ADC1_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
+SH.ADCx_IN5.0=ADC1_IN5,IN5
+SH.ADCx_IN5.ConfNb=1
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN7.0=ADC1_IN7,IN7
+SH.ADCx_IN7.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+SH.ADCx_IN8.ConfNb=1
+SH.ADCx_IN9.0=ADC1_IN9,IN9
+SH.ADCx_IN9.ConfNb=1
+SH.S_TIM1_CH4.0=TIM1_CH4,Input_Capture4_from_TI4
+SH.S_TIM1_CH4.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM1.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM1.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-Input_Capture4_from_TI4,TIM_MasterOutputTrigger,ICPolarity_CH4
+TIM1.Period=0xffff
+TIM1.Prescaler=71
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.Channel-PWM\ Generation4\ No\ Output=TIM_CHANNEL_4
+TIM4.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,Channel-PWM Generation4 No Output,Pulse-PWM Generation4 No Output
+TIM4.Period=500
+TIM4.Prescaler=7
+TIM4.Pulse-PWM\ Generation4\ No\ Output=250
+TIM4.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM4.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
 USART1.IPParameters=VirtualMode
@@ -168,4 +383,10 @@ VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM4_VS_no_output4.Mode=PWM Generation4 No Output
+VP_TIM4_VS_no_output4.Signal=TIM4_VS_no_output4
 board=custom
