--- a/rtos.ioc
+++ b/rtos.ioc
@@ -18,7 +18,7 @@ ADC1.DataAlign=ADC_DATAALIGN_RIGHT
 ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EnableAnalogWatchDog=false
 ADC1.EnableRegularConversion=ENABLE
-ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T4_CC4
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_CC1
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,DataAlign,ScanConvMode,DiscontinuousConvMode,EnableRegularConversion,ExternalTrigConv,InjNumberOfConversion,EnableAnalogWatchDog,Rank-15\#ChannelRegularConversion,Channel-15\#ChannelRegularConversion,SamplingTime-15\#ChannelRegularConversion,master
 ADC1.InjNumberOfConversion=0
 ADC1.NbrOfConversion=14
@@ -93,36 +93,36 @@ Mcu.Pin14=PC4
 Mcu.Pin15=PC5
 Mcu.Pin16=PB0
 Mcu.Pin17=PB1
-Mcu.Pin18=PE14
-Mcu.Pin19=PD8
+Mcu.Pin18=PD8
+Mcu.Pin19=PD9
 Mcu.Pin2=OSC_IN
-Mcu.Pin20=PD9
-Mcu.Pin21=PD10
-Mcu.Pin22=PD11
-Mcu.Pin23=PD12
-Mcu.Pin24=PD13
-Mcu.Pin25=PD14
-Mcu.Pin26=PD15
-Mcu.Pin27=PC6
-Mcu.Pin28=PC7
-Mcu.Pin29=PA8
+Mcu.Pin20=PD10
+Mcu.Pin21=PD11
+Mcu.Pin22=PD12
+Mcu.Pin23=PD13
+Mcu.Pin24=PD14
+Mcu.Pin25=PD15
+Mcu.Pin26=PC6
+Mcu.Pin27=PC7
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
 Mcu.Pin3=OSC_OUT
-Mcu.Pin30=PA9
-Mcu.Pin31=PA10
-Mcu.Pin32=PA12
-Mcu.Pin33=PA13
-Mcu.Pin34=PA14
-Mcu.Pin35=PA15
-Mcu.Pin36=PC10
-Mcu.Pin37=PC11
-Mcu.Pin38=PB3
+Mcu.Pin30=PA10
+Mcu.Pin31=PA12
+Mcu.Pin32=PA13
+Mcu.Pin33=PA14
+Mcu.Pin34=PA15
+Mcu.Pin35=PC10
+Mcu.Pin36=PC11
+Mcu.Pin37=PB3
+Mcu.Pin38=PB8
 Mcu.Pin39=VP_FREERTOS_VS_ENABLE
 Mcu.Pin4=PC0
 Mcu.Pin40=VP_RTC_VS_RTC_Activate
 Mcu.Pin41=VP_SYS_VS_Systick
 Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin44=VP_TIM4_VS_no_output4
+Mcu.Pin43=VP_TIM1_VS_no_output1
+Mcu.Pin44=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin5=PC1
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
@@ -145,6 +145,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false
 NVIC.TIM1_CC_IRQn=true\:0\:0\:true\:false\:true\:false\:true
+NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UART4_IRQn=true\:15\:0\:true\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:5\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -195,6 +196,7 @@ PB1.GPIO_Label=AC1_ADC
 PB1.Signal=ADCx_IN9
 PB3.Mode=JTAG_4_pins
 PB3.Signal=SYS_JTDO
+PB8.Signal=S_TIM4_CH3
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=AC9_ADC
 PC0.Signal=ADCx_IN10
@@ -275,7 +277,6 @@ PD9.GPIOParameters=GPIO_Label
 PD9.GPIO_Label=Contactor9
 PD9.Locked=true
 PD9.Signal=GPIO_Output
-PE14.Signal=S_TIM1_CH4
 PinOutPanel.RotationAngle=180
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -356,21 +357,21 @@ SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
-SH.S_TIM1_CH4.0=TIM1_CH4,Input_Capture4_from_TI4
-SH.S_TIM1_CH4.ConfNb=1
+SH.S_TIM4_CH3.0=TIM4_CH3,Input_Capture3_from_TI3
+SH.S_TIM4_CH3.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM1.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
-TIM1.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM1.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-Input_Capture4_from_TI4,TIM_MasterOutputTrigger,ICPolarity_CH4
-TIM1.Period=0xffff
-TIM1.Prescaler=71
+TIM1.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,Channel-PWM Generation1 No Output,Pulse-PWM Generation1 No Output
+TIM1.Period=500
+TIM1.Prescaler=7
+TIM1.Pulse-PWM\ Generation1\ No\ Output=250
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM4.Channel-PWM\ Generation4\ No\ Output=TIM_CHANNEL_4
-TIM4.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,Channel-PWM Generation4 No Output,Pulse-PWM Generation4 No Output
-TIM4.Period=500
-TIM4.Prescaler=7
-TIM4.Pulse-PWM\ Generation4\ No\ Output=250
+TIM4.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM4.ICPolarity_CH3=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM4.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,Channel-Input_Capture3_from_TI3,ICPolarity_CH3
+TIM4.Period=0xffff
+TIM4.Prescaler=71
 TIM4.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM4.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 UART4.IPParameters=VirtualMode
@@ -385,8 +386,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
-VP_TIM4_VS_no_output4.Mode=PWM Generation4 No Output
-VP_TIM4_VS_no_output4.Signal=TIM4_VS_no_output4
 board=custom
